# tennis-cv

./: .gitignore  0-test_video_playback.py  02-determine-joints.py  03-cut_video.py  1-make_detections.py  README.md  pyproject.toml
