[tool.poetry]
name = "tennis-cv"
version = "0.1.0"
description = ""
authors = ["Andy Galdi <aandy.galdi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
mediapipe = "^0.9.0"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
